--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <version>1.4.2.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>9.1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
