--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/halykacademyMockDB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
