--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,16 @@
             <version>1.4.2.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!--
         <dependency>
             <groupId>org.flywaydb</groupId>
@@ -67,11 +77,11 @@
                     <source>9</source>
                     <target>9</target>
                     <annotationProcessorPaths>
-                        <path>
+                        <!--<path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
                             <version>1.4.2.Final</version>
-                        </path>
+                        </path>-->
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
