--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,11 @@
         </dependency>
 
 
-       <!-- <dependency>
+        <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
             <version>8.5.13</version>
-        </dependency>-->
+        </dependency>
 
     </dependencies>
 
