--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,14 @@
             <version>8.5.13</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.9</version>
+        </dependency>-->
+
+
     </dependencies>
 
     <build>
